--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/bootstrap.js": "/js/bootstrap.js",
-    "/css/all.css": "/css/all.css",
-    "/js/all.js": "/js/all.js"
+    "/js/bootstrap.min.js": "/js/bootstrap.min.js",
+    "/js/all.js": "/js/all.js",
+    "/css/all.css": "/css/all.css"
 }
