--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,8 @@
     "/css/app.css": "/css/app.css",
     "/js/style.js": "/js/style.js",
     "/js/bootstrap.min.js": "/js/bootstrap.min.js",
+    "/js/adminlte.min.js": "/js/adminlte.min.js",
     "/js/all.js": "/js/all.js",
-    "/css/all.css": "/css/all.css"
+    "/css/all.css": "/css/all.css",
+    "/css/admin.css": "/css/admin.css"
 }
